2016-07-20 Hanna Knutsson <hanna_k@fmgirl.com>

	* 'delete' command, for removal of user-defined variables, in qalc

2016-07-18 Hanna Knutsson <hanna_k@fmgirl.com>

	* Option to list all functions, variables or units in qalc

2016-07-17 Hanna Knutsson <hanna_k@fmgirl.com>

	* 'list' command, which displays a list of user defined variables, functions and units, in qalc

2016-07-12 Hanna Knutsson <hanna_k@fmgirl.com>

	* Avoid warning message if exchange rates file does not exist

2016-07-08 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix errors and warnings when compiling with clang, and fix unordered_map/hash_map issues

2016-07-06 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix crash when using locale missing on system

2016-06-29 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix parsing of "today" and add "tomorrow" and "yesterday"

2016-06-11 Hanna Knutsson <hanna_k@fmgirl.com>

	* Show actual number of days since last exchange rates update

2016-06-10 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix localization of command line arguments

2016-06-09 Hanna Knutsson <hanna_k@fmgirl.com>

	* Improve exchange rates handling
	* Add interactive command line option to qalc. Exit after commands from file have been executed unless interactive mode has been explicitly selected.

2016-06-07 Hanna Knutsson <hanna_k@fmgirl.com>

	* Do not check if exchange rates is up to date when using currencies with fixed exchange rate (currencies replaced by euro)
	* Warn about old exchange rates again after one week if the application has not been restarted (Calculator object not recreated) 
	* Make sure precision and if approximate is not lost from units, functions and variables
	* Update physical constants from CODATA Recommended Values 2014
	* Fix unit precision from definitions

2016-06-03 Hanna Knutsson <hanna_k@fmgirl.com>

	* sqrt(7/4) = sqrt(7)/2, sqrt(2)/2−(1/sqrt(2)) equals exactly zero

2016-05-27 Hanna Knutsson <hanna_k@fmgirl.com>
	
	* Allow special "to" commands directly in expression